研发环境/团队协作/bookstack/bookstack.yaml
---
# 外部域名
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bookstack
  namespace: dev-collaborate
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: book.demo.
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: bookstack
                port:
                  number: 80
---
# 内部域名
apiVersion: v1
kind: Service
metadata:
  name: bookstack
  namespace: dev-collaborate
spec:
  selector:
    app: bookstack
  ports:
    - name: for-80
      port: 80
      targetPort: 80
    - name: for-3306
      port: 3306
      targetPort: 3306
      nodePort: 30816
  type: LoadBalancer
---
# 服务
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bookstack
  namespace: dev-collaborate
  labels:
    app: bookstack
spec:
  serviceName: bookstack
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      restartPolicy: Always
      containers:
        - name: mysql
          image: ctr-registry.local./ops/mysql:8.0.27
          imagePullPolicy: IfNotPresent
          args:
            - --character-set-server=utf8mb4
            - --collation-server=utf8mb4_unicode_ci
            - --max-connect-errors=18446744073709551615
            - --default-authentication-plugin=mysql_native_password
            - --skip_ssl
          ports:
            - containerPort: 3306
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: bookstack-mysql
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 5000m
              memory: 5000Mi
              ephemeral-storage: 10Gi
          livenessProbe:
            initialDelaySeconds: 60
            tcpSocket:
              port: 3306
            periodSeconds: 5
        - name: bookstack
          image: ctr-registry.local./ops/leihen/centos:7-n1.16-p7.2-bookstack0.30
          imagePullPolicy: IfNotPresent
          command:
            - sh
            - -c
            - |
              #!/usr/bin/env bash -e
              cd /home/www/project/BookStack/
              chmod -R 777 public/uploads
              chmod -R 777 storage/uploads
              sleep 10
              sed -i "s/DB_HOST=localhost/DB_HOST=127.0.0.1:3306/g" .env
              sed -i "s/https:\/\/example.com/http:\/\/book.demo./g" .env
              sed -i "s/database_database/bookstack/g" .env
              sed -i "s/database_username/bookstack/g" .env
              sed -i "s/database_user_password/Fe6AaPqmG9gAYQe4LjCM/g" .env
              cat .env
              echo y | /home/www/php/bin/php artisan key:generate
              echo y | /home/www/php/bin/php artisan migrate -v
              echo "ok artisan"
              /home/www/nginx/bin/nginx -c  /home/www/nginx/conf/nginx.conf
              /home/www/php/bin/php-fpm start
              tail -f /dev/null
          ports:
            - containerPort: 9777
            - containerPort: 3306
          volumeMounts:
            - mountPath: /home/www/project/BookStack/storage/uploads
              name: bookstack
              subPath: storage
            - mountPath: /home/www/project/BookStack/public/uploads
              name: bookstack
              subPath: public
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
              ephemeral-storage: 1Gi
            limits:
              cpu: 9000m
              memory: 9000Mi
              ephemeral-storage: 10Gi
  volumeClaimTemplates:
    - metadata:
        name: bookstack-mysql
      spec:
        storageClassName: rook-ceph-block
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
    - metadata:
        name: bookstack
      spec:
        storageClassName: rook-ceph-block
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 100Gi
